--- a/laoPov.rmd
+++ b/laoPov.rmd
@@ -9,11 +9,6 @@ library("xtable")
 source("LoadData.R");
 ```
 
-
-```{r}
-#table (PoorList=="Yes",lps$"dist")
-```
-
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 # Respondent Gender Breakdown
 
@@ -31,15 +26,14 @@ print(xtable(lpsraw[is.na(RespGender),1:20]),"html")
 ```
 #Poor List
 ```{r,results='asis'}
-PoorList<-factor(lps$"q1_5",c("1","3"),c("Yes","No"));
-PoorList.table<-xtable(table(PoorList))
-print(PoorList.table,type="html")
+VilPoor.table<-xtable(table(VilPoor))
+print(VilPoor.table,type="html")
 ```
-```r sum(PoorList.table)```/```r dim(lpsraw)[1]```
+```r sum(VilPoor.table)```/```r dim(lpsraw)[1]```
 
 #Respondant Gender To Poor
 ```{r,results='hold'}
-table(RespGender,PoorList)
+table(RespGender,VilPoor)
 ````
 #Wealth Score
 ```{r}
@@ -49,14 +43,45 @@ ScoreCols <- match("q9_1_1",names(lps)) : match("q9_1_10",names(lps));
 Score<-vector(length = dim(lps)[1])
 for (i in 1:dim(lps)[1]) {Score[i]<-sum(lps[i,ScoreCols])}
 
-#Score<-rowsum(lps[,ScoreCols]);
+score<-rowSums(lps[,ScoreCols]);
 #Score
 hist(Score,breaks = 10)
-p1<-hist(Score[PoorList=="Yes"],probability = TRUE);
-p2<-hist(Score[PoorList!="Yes"],probability=TRUE);
+p1<-hist(Score[VilPoor],probability=TRUE);
+p2<-hist(Score[!VilPoor],probability=TRUE);
 
-plot( p1, col=rgb(0,0,1,1/4), xlim=c(0,20),freq=FALSE )        # first histogram
+# first histogram
+plot( p1, col=rgb(0,0,1,1/4), xlim=c(0,20),freq=FALSE, xlab="Wealth Score", ylab="Response Density" )        
 plot( p2, col=rgb(1,0,0,1/4), xlim=c(0,20),freq=FALSE, add=T)  # second
+
+p1<-hist(Score[VilPoor],probability=FALSE);
+p2<-hist(Score[!VilPoor],probability=FALSE);
+
+# first histogram
+plot( p1, col=rgb(0,0,1,1/4), xlim=c(0,20),freq=TRUE, xlab="Wealth Score", ylab="Response Density" )        
+plot( p2, col=rgb(1,0,0,1/4), xlim=c(0,20),freq=TRUE, add=T)  # second
+
+## Break by HEF 
+p1<-hist(Score[HEFCard],probability=FALSE);
+p2<-hist(Score[!HEFCard],probability=FALSE);
+
+
+frame()
+# first histogram
+plot( p1, col=rgb(0,0,1,1/4), xlim=c(0,20),freq=FALSE, xlab="Wealth Score-", ylab="Response Density" )        
+plot( p2, col=rgb(1,0,0,1/4), xlim=c(0,20),freq=FALSE, add=T)  # second
+
+plot( p2, col=rgb(1,0,0,1/4), xlim=c(0,20),freq=TRUE, xlab="Wealth Score-", ylab="Response Count" )        
+plot( p1, col=rgb(0,0,1,1/4), xlim=c(0,20),freq=TRUE, add=T)  # second
+
+
+```
+
+Red is no HEF.
+
+HEF card holders are ```r sum(HEFCard)``` out of ```r length(HEFCard) ``` non card holders ```r sum(!HEFCard)``` 
+
+```{r}
+chisq.test(Score,HEFCard)
 ```
 
 # 1.5<1.8.6 + 1.8.7
@@ -67,32 +92,35 @@ plot( p2, col=rgb(1,0,0,1/4), xlim=c(0,20),freq=FALSE, add=T)  # second
   1.8.7 Does anyone in your HH belong to any of the foll... - Poor List of government (HEF or not)
   
 ```{r}
-  HEFCard <-!is.na(lps$"q1_8_6");
+  HEFCard <-!is.na(lps$"q1_8_6"); 
   AllPoor <-!is.na(lps$"q1_8_7");
   sum(HEFCard)  
   sum(AllPoor)
   sum(HEFCard & AllPoor)
   sum(HEFCard | AllPoor)
-  sum(PoorList=="Yes")
-  sum(PoorList=="Yes" & !(HEFCard | AllPoor))
-  sum((HEFCard | AllPoor) & !(PoorList=="Yes"))
+  sum(VilPoor)
+  sum(VilPoor & !(HEFCard | AllPoor))
+  sum((HEFCard | AllPoor) & !(VilPoor))
+
+  table(HEFCard,PreId)
+  table(AllPoor,PreId)
 ```  
-There are ```r sum(PoorList=="Yes" | HEFCard | AllPoor)``` on one poor list or other.
+There are ```r sum(VilPoor | HEFCard | AllPoor)``` on one poor list or other.
 
 ```r  sum(HEFCard)  ``` people are on the HEF list and a seperate ```r  sum(AllPoor & !HEFCard)``` answered yes to being on a govt list.
 
   ```r sum(HEFCard & AllPoor)``` respondants answered yes to both, and ```r  sum(HEFCard | AllPoor)``` answered yes to either.
   
-  Of the ```r  sum(HEFCard | AllPoor)```, ```r sum((HEFCard | AllPoor) & (PoorList=="Yes"))``` are on the vilage poor list.
-  There being ```r  sum(PoorList=="Yes")``` on the village poor list, this leaves ```r  sum(PoorList=="Yes" & !(HEFCard | AllPoor))``` on the vilage poor list who neither have a HEF card nor answer yes to being on a govt poor list. Conversly there are ```r  sum(HEFCard  & !(PoorList=="Yes"))``` who have an HEF card and are not on the village poor list and ```r sum(AllPoor  & !(PoorList=="Yes"))``` on a govt poor list but not a village one.
+  Of the ```r  sum(HEFCard | AllPoor)```, ```r sum((HEFCard | AllPoor) & (VilPoor))``` are on the vilage poor list.
+  There being ```r  sum(VilPoor)``` on the village poor list, this leaves ```r  sum(VilPoor & !(HEFCard | AllPoor))``` on the vilage poor list who neither have a HEF card nor answer yes to being on a govt poor list. Conversly there are ```r  sum(HEFCard  & !(VilPoor))``` who have an HEF card and are not on the village poor list and ```r sum(AllPoor  & !(VilPoor))``` on a govt poor list but not a village one.
 
 ```{r}
-OnAnyList   = PoorList=="Yes" | HEFCard | AllPoor;
-VillageOnly = PoorList=="Yes" & !(HEFCard | AllPoor);
-HEFOnly     = HEFCard & (!PoorList=="Yes" | AllPoor);
-GVTOnly     = AllPoor & (!PoorList=="Yes" |HEFCard);
-Village_HEF = PoorList=="Yes" & HEFCard;
-Village_GVT = PoorList=="Yes" & AllPoor;
+OnAnyList   = VilPoor |    HEFCard | AllPoor;
+VillageOnly = VilPoor & !( HEFCard | AllPoor);
+HEFOnly     = HEFCard &  (!VilPoor | AllPoor);
+GVTOnly     = AllPoor &  (!VilPoor |HEFCard);
+Village_HEF = VilPoor & HEFCard;
+Village_GVT = VilPoor & AllPoor;
 
 
 OnAnyList_ByDist <-table(lps$"dist"[OnAnyList],exclude=c(NA))/sum(OnAnyList);
