Sections 1 and 2 complete Untility files generated

--- a/tex/Tables.tex
+++ b/tex/Tables.tex
@@ -1,15 +1,37 @@
 \documentclass[]{article}
+\usepackage{graphicx}
 
 %opening
-\title{}
+\title{Health and Poverty Report Table Collection}
 \author{}
 
 \begin{document}
 
-\maketitle
+\maketitle 
 
+\input{EthnicMakeup.tex}
 \input{DemogTable.tex}
+\input{NumMothers.tex}
 \input{MosquitoNet.tex}
 \input{PregCard.tex}
+\input{Q4_4_ANC.tex}
+\input{Q4_7_Mother_TT_immun_before_or_during_pregnancy.tex}
+\input{Q4_7_Detail_PregCard.tex}
+\input{Q4_16_BirthFacility.tex}
+
+
+\includegraphics[width=0.7\linewidth]{Q4_31_waittimes}
+
+\input{Q4_32_WaitLong.tex}
+
+\input{Q5_17.22.27_Helpfull.tex}
+\input{Q5_17.22.27_Num_Reporting.tex}
+\input{Q5_5_Mother_Child_Have_monitoring_booklet.tex}
+\input{Q2_Inpatiant_Care_Counts.tex}
+\input{Q2_Inpatiant_Care_PercentByGroup.tex}
+\input{Q2_Inpatiant_Care_PercentByCenter.tex}
+\input{Q2_Inpatiant_AverageStay_Lenght.tex}
+
+
 
 \end{document}
