Parsing of the cost tables as seperate table

--- a/tex/Tables.tex
+++ b/tex/Tables.tex
@@ -31,7 +31,7 @@
 \input{Q2_Inpatiant_Care_PercentByGroup.tex}
 \input{Q2_Inpatiant_Care_PercentByCenter.tex}
 \input{Q2_Inpatiant_AverageStay_Lenght.tex}
-
+\input{Q__Frequncies.tex}
 
 
 \end{document}
