Report nearly complete on Google

--- a/tex/Tables.tex
+++ b/tex/Tables.tex
@@ -8,30 +8,136 @@
 \begin{document}
 
 \maketitle 
+\section {Demographics}
+Hello World
 
-\input{EthnicMakeup.tex}
 \input{DemogTable.tex}
+\input{EthnicMakeup.tex}
 \input{NumMothers.tex}
 \input{MosquitoNet.tex}
+
+\input{EthnicMakeup.tex}
 \input{PregCard.tex}
-\input{Q4_4_ANC.tex}
-\input{Q4_7_Mother_TT_immun_before_or_during_pregnancy.tex}
-\input{Q4_7_Detail_PregCard.tex}
-\input{Q4_16_BirthFacility.tex}
+\input{Q2_8-16_1-30_HouseHolds_With_Admisions_in_past_year.tex}
+\input{Q2_8-16_1-30_HouseHolds_With_Admisions.tex}
+\input{Q2_8-16_1-30_Total_Admisions_last_year.tex}
+\input{Q2_Inpatiant_AverageStay_Lenght.tex}
+\input{Q2_Inpatiant_Care_Counts.tex}
+\input{Q2_Inpatiant_Care_PercentByCenter.tex}
+\input{Q2_Inpatiant_Care_PercentByGroup.tex}
+\input{Q2_Outpatient_event_count.tex}
+
+%% \input{Q2_Outpatient_NumServices_Used.tex}
+%% \input{Q2_Outpatient_service_utilitzation_rates.tex}
+%% \input{Q2_Outpatient_usage_distribution_significance.tex}
+%% \input{Q2_Outpatient_usage_distribution.tex}
+%% \input{q3.3.10.5_Out_Patient_Total_cost_Overall_average.tex}
+%% \input{q3.5.10.5_In_Patient1_Total_cost_Overall_average.tex}
+%% \input{q3.7.10.5_In_Patient2_Total_cost_Overall_average.tex}
+%%\input{Q4_16_BirthFacility.tex}
+%%\input{Q4_18_Payment_for_delivery.tex}
+
+%%\input{q4_20-25_Food_and_transportation_allowance_for_hospital_births.tex}
+
+%%\input{Q4_20_Food_allowances_for_hospital_births.tex}
+%%\input{Q4_25_Tranposrtation_allowance_for_births_>3k.tex}
+\input{Q4_2_MosquitoNets.tex}
 
 
-\includegraphics[width=0.7\linewidth]{Q4_31_waittimes}
+%% \input{Q4_31_WaitLong.tex}
+%% \input{Q4_31_waittimes.png}
 
 \input{Q4_32_WaitLong.tex}
+\input{Q4_34_Mother_Breast_feed_time.tex}
+\input{Q4_35_Time_to_return_after_delivery.tex}
+\input{Q4_3_Have_Pregnancy_Monitoring_Card.tex}
+\input{Q4_41_Family_Planning_Use.tex}
+\input{Q4_4_ANC_Card_count.tex}
+\input{Q4_4_ANC_count.tex}
+\input{Q4_4_ANC.tex}
 
-\input{Q5_17.22.27_Helpfull.tex}
-\input{Q5_17.22.27_Num_Reporting.tex}
-\input{Q5_5_Mother_Child_Have_monitoring_booklet.tex}
-\input{Q2_Inpatiant_Care_Counts.tex}
-\input{Q2_Inpatiant_Care_PercentByGroup.tex}
-\input{Q2_Inpatiant_Care_PercentByCenter.tex}
-\input{Q2_Inpatiant_AverageStay_Lenght.tex}
-\input{Q__Frequncies.tex}
+\input{Q4_4_ANC_verbal_count.tex}
+\input{Q4_4_Card.tex}
+\input{Q4_4_Food_allowances_for_hospital_births.tex}
+\input{Q4_4_Verbal_and_Card.tex}
+\input{Q4_4_Verbal.tex}
+\input{Q4_7_Detail_PregCard.tex}
+\input{Q4_7_Detail_TT_Pregnancy_Card.tex}
+\input{Q4_7_Mother_TT_immun_before_or_during_pregnancy.tex}
+\input{Q_4_Frequncies.tex}
+
+
+%% \input{Q4_NumMothers.csv.tex}
+%% \input{Q5_17-22-27_Helpfull.tex}
+%% \input{Q5_17.22.27_Helpfull.tex}
+%% \input{Q5_17-22-27_Num_Reporting.tex}
+%% \input{Q5_17.22.27_Num_Reporting.tex}
+%% \input{Q5_18_Cost_of_treating_childs_last_diarhea.tex}
+%% \input{Q5_23_Mother_Child_Last_respiratory_First_treatment_Cost.tex}
+%% \input{Q5_28_Mother_Child_Last_fever_First_treatment_Cost.tex}
+%% \input{Q5_5_Mother_Child_Have_monitoring_booklet.tex}
+%% \input{Q5_5_Mothers_Have_Monitoring_Book.tex}
+%% \input{Q5_6_10_Mother_Child_Immu_MR_12-23_Rates.tex}
+%% \input{Q5_6_10_Mother_Child_Immu_MR_12-23.tex}
+%% \input{Q5_6_1_BCG_Immunization_Rates.tex}
+%% \input{Q5_6_1_Mother_Child_Immu_BCG_Rates.tex}
+%% \input{Q5_6_1_Mother_Child_Immu_BCG.tex}
+%% \input{Q5_6_2_Mother_Child_Immu_HepB0_Rates.tex}
+%% \input{Q5_6_2_Mother_Child_Immu_HepB0.tex}
+%% \input{Q5_6_3_Mother_Child_Immu_DPT-HepB-Hib1_Rates.tex}
+%% \input{Q5_6_3_Mother_Child_Immu_DPT-HepB-Hib1.tex}
+%% \input{Q5_6_4_Mother_Child_Immu_OPV_olio1_Rates.tex}
+%% \input{Q5_6_4_Mother_Child_Immu_OPV_olio1.tex}
+%% \input{Q5_6_5_Mother_Child_Immu_DPTHepB-Hib2_Rates.tex}
+%% \input{Q5_6_5_Mother_Child_Immu_DPTHepB-Hib2.tex}
+%% \input{Q5_6_6_Mother_Child_Immu_OPV_Polio2_Rates.tex}
+%% \input{Q5_6_6_Mother_Child_Immu_OPV_Polio2.tex}
+%% \input{Q5_6_7_Mother_Child_Immu_DPT-HepB-Hib3_Rates.tex}
+%% \input{Q5_6_7_Mother_Child_Immu_DPT-HepB-Hib3.tex}
+%% \input{Q5_6_8_Mother_Child_Immu_PV_Polio3_Rates.tex}
+%% \input{Q5_6_8_Mother_Child_Immu_PV_Polio3.tex}
+%% \input{Q5_6_9_Mother_Child_Immu_MR_9-11_Rates.tex}
+%% \input{Q5_6_9_Mother_Child_Immu_MR_9-11.tex}
+%% \input{Q5_7_10_Mother_Child_Mebendazole_Rates.tex}
+%% \input{Q5_7_10_Mother_Child_Vitamin_A_Rates.tex}
+%% \input{Q5_7_Mother_Child_Mebendazole_Rates.tex}
+%% \input{Q5_7_Mother_Child_Vitamin_A_Rates.tex}
+%% \input{Q5_8_1_Number_of_growth_monitoring_visits.tex}
+%% \input{Q5_9_Still_Breastfeeding.tex}
+%% \input{q7_1..4_Knowledge_of_free_CU5_care.tex}
+%% \input{Q7_17.21_Chiled_admitted_satifcation_measure.tex}
+%% \input{Q7_17.21_Chiled_admitted_satifcation_measure.tex~}
+%% \input{q7_4_Number_of_sources_used_by_women_in_the_know.tex}
+%% \input{q7_8_CU5_Addmitance_and_OOP.tex}
+%% \input{q8_1..4_HEF_Awareness.tex}
+%% \input{Q8_1..4_HEF_Awareness.tex}
+%% \input{Q8_15_Transportation_allowaance_Rates_by_admission_facility.tex}
+%% \input{Q8_15_Transportation_allowance_Rates_by_admission_facility.tex}
+%% \input{Q8_8_OOP_Rates_by_admission_facility.tex}
+%% \input{Q8_8_x_Q3_5_Medical_fee_report_for_non_OOP.tex}
+%% \input{Q8_8_x_Q3_5_Medical_fee_report_for_OOP.tex}
+%% \input{Q8_8_x_Q3_7_Medical_fee_report_for_non_OOP.tex}
+%% \input{Q8_8_x_Q3_7_Medical_fee_report_for_OOP.tex}
+%% \input{Q8_9_Food_allowaance_Rates_by_admission_facility.tex}
+%% \input{Q8_9_No_food_allowance_Rates_by_admission_facility.tex}
+
+
+
+%% \input{PregCard.tex}
+%% \input{Q4_4_ANC.tex}
+%% \input{Q4_7_Mother_TT_immun_before_or_during_pregnancy.tex}
+%% \input{Q4_7_Detail_PregCard.tex}
+%% \input{Q4_16_BirthFacility.tex}
+%% \includegraphics[width=0.7\linewidth]{Q4_31_waittimes}
+%% \input{Q4_32_WaitLong.tex}
+%% \input{Q5_17.22.27_Helpfull.tex}
+%% \input{Q5_17.22.27_Num_Reporting.tex}
+%% \input{Q5_5_Mother_Child_Have_monitoring_booklet.tex}
+%% \input{Q2_Inpatiant_Care_Counts.tex}
+%% \input{Q2_Inpatiant_Care_PercentByGroup.tex}
+%% \input{Q2_Inpatiant_Care_PercentByCenter.tex}
+%% \input{Q2_Inpatiant_AverageStay_Lenght.tex}
+%% \input{Q7_17.21_Chiled_admitted_satifcation_measure.tex}
 
 
 \end{document}
