--- a/tex/Q5_17.22.27_Helpfull.tex
+++ b/tex/Q5_17.22.27_Helpfull.tex
@@ -1,14 +1,15 @@
 % latex table generated in R 3.2.0 by xtable 1.7-4 package
-% Mon May 11 16:06:12 2015
+% Wed May 27 23:18:55 2015
 \begin{table}[ht]
 \centering
-\begin{tabular}{rrrrr}
+\begin{tabular}{rllllllll}
   \hline
- & PreID & GeoID & NoAssist & All \\ 
+ & PreID & V2 & GeoID & V4 & No Assist & V6 & All & V8 \\ 
   \hline
-Mother\_Child\_Last\_diarhea\_Received\_Helpful & 100.0\% & 96.4\% & 100.0\% & 98.7\% \\ 
-  Mother\_Child\_Last\_respiratory\_First\_treatment\_Helpful & 100.0\% & 98.3\% & 100.0\% & 99.5\% \\ 
-  Mother\_Child\_Last\_fever\_First\_treatment\_Helpful & 100.0\% & 95.7\% & 100.0\% & 99.0\% \\ 
+Mother\_Child\_Last\_diarhea\_Received\_Helpful & 39 & 54.2\% & 55 & 40.7\% & 65 & 40.9\% & 159 & 43.4\% \\ 
+  Mother\_Child\_Last\_respiratory\_First\_treatment\_Helpful & 52 & 72.2\% & 58 & 43.0\% & 112 & 70.4\% & 222 & 60.7\% \\ 
+  Mother\_Child\_Last\_fever\_First\_treatment\_Helpful & 30 & 41.7\% & 23 & 17.0\% & 47 & 29.6\% & 100 & 27.3\% \\ 
+   & 121 & 168.1\% & 136 & 100.7\% & 224 & 140.9\% & 481 & 131.4\% \\ 
    \hline
 \end{tabular}
 \caption{Percent Reporting Literature was Helpfull by Group} 
